# 2fa_extended

./: .gitignore  CMakeLists.txt  README.md  auth.h  main.cpp
include/: CMakeLists.txt  auth.h  bytes.h  otp.h
src/: CMakeLists.txt  ProgressBar.cpp  ProgressBar.h  sha1.h
